; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_spin.c_SpinlockSemaInit.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_spin.c_SpinlockSemaInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SpinlockSemaArray = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SpinlockSemaInit() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 (...) @SpinlockSemas()
  store i32 %4, i32* %2, align 4
  %5 = call i32 (...) @SpinlockSemaSize()
  %6 = call i64 @ShmemAllocUnlocked(i32 %5)
  %7 = inttoptr i64 %6 to i32*
  store i32* %7, i32** %1, align 8
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %18, %0
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %2, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %21

12:                                               ; preds = %8
  %13 = call i32 (...) @PGSemaphoreCreate()
  %14 = load i32*, i32** %1, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  store i32 %13, i32* %17, align 4
  br label %18

18:                                               ; preds = %12
  %19 = load i32, i32* %3, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %3, align 4
  br label %8

21:                                               ; preds = %8
  %22 = load i32*, i32** %1, align 8
  store i32* %22, i32** @SpinlockSemaArray, align 8
  ret void
}

declare dso_local i32 @SpinlockSemas(...) #1

declare dso_local i64 @ShmemAllocUnlocked(i32) #1

declare dso_local i32 @SpinlockSemaSize(...) #1

declare dso_local i32 @PGSemaphoreCreate(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
